feat: share competition and consolidate admin role
